# anypod

./: .cursorignore  .dockerignore  .envrc  .gitignore  .grype.yaml  .pre-commit-config.yaml  .ruff.toml  .trivyignore  AGENTS.md  CLAUDE.md  DESIGN_DOC.md  Dockerfile  LEARNINGS.md  LICENSE  README.md  README_pre.md  TASK_LIST.md  alembic.ini  debug.yaml  docker-compose.yaml  docker-entrypoint.sh  example_feeds.yaml  pyproject.toml  pyrightconfig.json  trivy.yaml
.agents/commands/: pr
.agents/skills/github-issue-filer/: SKILL.md
.agents/skills/github-issue-filer/scripts/: create_issue.py
.agents/skills/pr/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/commands/: check.md  gc.md  pr.md  prd.md  review.md
.claude/skills/: dependabot-batch-bump  github-issue-filer
.claude/skills/dependabot-batch-bump/: SKILL.md
.cursor/commands/: gc.md
.cursor/rules/: claude-project-rules.mdc  claude-tests-rules.mdc  design-doc.mdc  python-best-practices.mdc  python-testing.mdc  python-tooling.mdc
.gemini/: settings.json
.github/: dependabot.yaml  dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-issue-triage.yml  claude.yml  docker-pr-test.yml  docker-publish.yml  main-pipeline.yml  pull-request-pipeline.yml  security-scans-schedule.yml  security-scans.yml  update-bgutil-provider.yml  update-dockerfile-deps.yml  update-ytdlp-commit.yml
.serena/: project.yml
alembic/: README.md  env.py  script.py.mako
alembic/versions/: 2025_06_25_423d964333d1_initial_schema_from_sqlmodels.py  2025_06_25_78f7e4e33398_add_database_triggers.py  2025_06_27_56d11f3bc82c_add_resolved_url_field_to_feed_table.py  2025_07_10_23cf24f50086_add_author_email_field_to_feed_table.py  2025_08_25_329f6c9ad1b2_add_thumbnail_hosting_fields_and_renames.py  2025_08_31_d6b27488612a_create_app_state_table_for_global_.py  2025_10_07_e8752d424e88_add_playlist_index_to_download_table.py  2025_10_26_ad59f082d627_allow_feed_source_url_null.py  2025_11_04_e95766c77882_add_download_logs_column.py  2025_11_25_cd72a61e713d_change_explicit_to_boolean.py  2025_11_28_fd790245b92e_add_transcript_support.py
alembic_helpers/: triggers.py
docker/scripts/: convert_video.sh  docker-entrypoint.sh
docs/: configuration.md  database.md  development.md
docs/debug/: patreon_filtering_analysis.md
docs/designs/: 02-pot-provider-integration.md  03-reset-errors.md  04-persist-rss-xml.md  05-patreon-handler.md  06-manual-submission-feed.md  07-x-handler.md  08-transcription-support.md  09-thumbnail-refresh.md  10-refresh-consolidation-and-flexible-downloader.md  11-youtube-transcript-api-integration.md  pot-provider-integration.md  reset-errors.md  store-thumbnails.md  youtube-transcript-api-integration.md
scripts/: check_migrations.sh  redownload_transcripts.py  run_debug.sh  run_dev.sh  sloc.py  sync_agents_md.py  sync_cursor_rules.py
src/: db.py  main.py
src/anypod/: __init__.py  __main__.py  cli.py  clip_streamer.py  config.py  data_coordinator.py  data_coordinator.py.outdated  db.py  exceptions.py  ffmpeg.py  ffprobe.py  file_manager.py  image_downloader.py  logging_config.py  manual_feed_runner.py  manual_submission_service.py  metadata.py  mimetypes.py  path_manager.py  state_reconciler.py
src/anypod/cli/: __init__.py  cli.py  debug_downloader.py  debug_enqueuer.py  debug_ytdlp.py  default.py
src/anypod/config/: __init__.py  config.py  feed_config.py  podcast_categories.py  podcast_explicit.py
src/anypod/config/types/: __init__.py  cron_expression.py  download_delay.py  feed_metadata_overrides.py  podcast_categories.py  podcast_explicit.py  podcast_type.py
src/anypod/data_coordinator/: __init__.py  coordinator.py  coordinator.py.outdated  downloader.py  enqueuer.py  pruner.py
src/anypod/data_coordinator/types/: __init__.py  download_artifact.py  phase_result.py  processing_results.py
src/anypod/db/: __init__.py  app_state_db.py  base_db.py  db.py  decorators.py  download.py  download_db.py  download_status.py  feed.py  feed_db.py  source_type.py  sqlalchemy_core.py  sqlite_utils_core.py
src/anypod/db/types/: __init__.py  app_state.py  feed.py  (+5 more)
src/anypod/rss/: __init__.py  feedgen_core.py  podcast_extension.py  rss_feed.py
src/anypod/schedule/: __init__.py  apscheduler_core.py  scheduler.py
src/anypod/server/: __init__.py  app.py  dependencies.py  server.py  validation.py
src/anypod/utils/: cron_utils.py
src/anypod/ytdlp_wrapper/: __init__.py  base_handler.py  patreon_handler.py  youtube_handler.py  youtube_transcript.py  ytdlp_core.py  ytdlp_wrapper.py
tests/: CLAUDE.md  conftest.py  test_config.py  test_db.py
tests/anypod/: test_clip_streamer.py  test_config.py  test_data_coordinator.py  test_db.py  test_ffmpeg.py  test_ffprobe.py  test_file_manager.py  test_image_downloader.py  test_manual_feed_runner.py  test_manual_submission_service.py  test_metadata.py  test_path_manager.py  test_rss_feed.py  test_state_reconciler.py
tests/anypod/data_coordinator/: test_downloader.py  test_enqueuer.py  test_pruner.py
tests/anypod/db/: test_db.py  test_download_db.py  test_feed_db.py  test_sqlalchemy_core.py
tests/anypod/schedule/: test_scheduler.py
tests/anypod/server/: test_app.py
tests/anypod/utils/: test_cron_utils.py
tests/anypod/ytdlp_wrapper/: test_patreon_handler.py  test_twitter_handler.py  test_youtube_handler.py  test_ytdlp_core.py  test_ytdlp_info.py  test_ytdlp_wrapper.py
tests/config/: test_config.py
tests/helpers/: alembic.py  test_client.py
tests/integration/: conftest.py  integration_test_ytdlp_wrapper.py  test_integration_data_coordinator.py  test_integration_downloader.py  test_integration_enqueuer.py  test_integration_ff.py  test_integration_image_downloader.py  test_integration_manual_submission.py  test_integration_pruner.py  test_integration_scheduler.py  test_integration_server.py  test_integration_server_admin.py  test_integration_server_public.py  test_integration_state_reconciler.py  test_integration_youtube_transcript.py  test_integration_ytdlp_wrapper.py
(+23 files in other folders)
