[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "anypod"
version = "0.1.0"
description = "Thin yt‑dlp → podcast solution"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.3", "pydantic-settings>=2.9.1", "pyyaml>=6.0.2"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.7",
    "pyright>=1.1.400",
]

[project.scripts]
anypod = "anypod.cli:main"

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q --tb=short --disable-warnings --strict-markers --cov=src --cov-report=html --cov-report=term-missing"
filterwarnings = ["error"]
markers = [
    "integration: mark slow integration tests",
    "unit: mark fast, isolated unit tests",
]
log_cli = true
log_cli_level = "INFO"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/anypod/cli.py",
    "src/anypod/__main__.py",
    "src/anypod/__init__.py",
] # we won't test the executable files

[tool.coverage.report]
fail_under = 70
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage_html_report"

[tool.hatch.build.targets.wheel]
packages = ["src/anypod"]
