[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "anypod"
version = "0.1.0"
description = "Thin yt-dlp -> podcast solution"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "apscheduler>=3.11.0",
    "croniter>=6.0.0",
    "feedgen>=1.0.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "python-json-logger>=3.3.0",
    "pyyaml>=6.0.2",
    "readerwriterlock>=1.0.9",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlite-utils>=3.38",
    "sqlmodel>=0.0.24",
    "yt-dlp>=2025.4.30",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.7",
    "pyright>=1.1.400",
    "pytest-xdist>=3.7.0",
]

[project.scripts]
anypod = "anypod.__main__:main"

[tool.uv]
managed = true

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-ra -q --tb=short --disable-warnings --strict-markers -n 4 --cov=src --cov-report=html --cov-report=term-missing"
filterwarnings = ["error"]
markers = [
    "integration: mark slow integration tests",
    "unit: mark fast, isolated unit tests",
]
log_cli = true
log_cli_level = "INFO"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/anypod/logging_config.py",
    "src/anypod/cli/*",
    "src/anypod/**/__main__.py",
    "src/anypod/**/__init__.py",
] # we won't test the executable files

[tool.coverage.report]
fail_under = 70
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage_html_report"

[tool.hatch.build.targets.wheel]
packages = ["src/anypod"]

[tool.mypy]
strict = true
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_untyped_calls = true
